tests/testthat/invalid_sgf/metadata_with_iron_giant_face.sgf
(;FF[4]GM[1]SZ[19]PB[Bret];B[aa]C[;-]];W[bb];B[cc];W[dd];B[ad];W[bd])